presentation juke-box

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://use.typekit.net/cys5gbm.css">
+    <link href="https://db.onlinewebfonts.com/c/4c4a8b4f494bf44c6891cbd63789c881?family=Budmo+W00+Solid" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/690f1ec2426a50d0d059c20a6d9592e6?family=ScubaWeb-Bold+W03+Regular" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/35984067cd8ce807cf3dba9ec0f27acc?family=Caros+Soft+Medium" rel="stylesheet" type="text/css"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
